* Windows: Fixes a hang when adjusting Z-order in some situations
* Fix SparseArray methods get_lowest_off_bit() and get_lowest_on_bit()
* Fix linecache error when distributing for newer Python versions
* Fix `await AsyncFuture.gather()` returning first item instead of tuple (#1738)
* Fix use-after-free in collision system with transform cache disabled (#1733)
* OpenGL: fix error blitting depth texture on macOS (#1719)
* OpenGL: fix SSBO support not being detected in certain situations
* X11: Add config variable to enable detection of autorepeat key events (#1735)
* GUI: Fix bug with PGSliderBar dragging (#1722)
* Minor thread safety things for free-threaded Python builds
* Add forward compatibility for bam version 6.46
* Fixes a harmless buffer overflow in pdtoa
* Fix compilation issues with SDL version of tinydisplay (#1708)
* bam2egg: Fix issue when having more than two tags (#1725)
* Fix "Detected leak for ... which interrogate cannot delete." error (#1743)
* Fix PythonCallbackObject crash upon destruction in some cases
* PStats: Fix crash when receiving frames out of order
* PandaFramework::close_framework() now clears task manager of tasks

-----------------------  RELEASE 1.10.15  -----------------------

This release adds support for Python 3.13, and fixes some significant bugs.
Upgrading is highly recommended.

Windowing
* Fix regression related to fullscreen switching on Windows (#1594)
* Fix issues related to fullscreen switching corner cases on macOS
* Fix keyUp event being eaten when switching fullscreen modes on macOS
* Support UTF-8 window titles on X11
* Fix wrong error message on X11 if xf86dga extension is not found

Rendering
* Add "Khronos PBR Neutral" tone mapping operator to HDR filter (#1659)
* OpenGL: Fix offscreen buffer clearing if back buffers are requested
* DirectX 9: Fix crash on window event after window close
* DirectX 9: Fix support for r32f and rgba32f textures
* DirectX 9: Fix crash when copying inverted framebuffer to texture RAM